--- a/css/test.css
+++ b/css/test.css
@@ -280,6 +280,7 @@ footer {
 .comments__user {
   display: grid;
   grid-template-columns: 50px 1fr;
+  grid-template-rows: 21px auto auto;
   column-gap: 24px;
   row-gap: 8px;
 }
@@ -288,9 +289,11 @@ footer {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   border-radius: 50%;
+  background-color: #9F7303;
 }
 
 .user__name {
+  font-size: 14px;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
 }
