--- a/css/test.css
+++ b/css/test.css
@@ -6,6 +6,8 @@ body {
   color: #000000;
   width: 1440px;
   background-color: #FFFFFF;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .wysiwyg__wrapper {
