--- a/css/test.css
+++ b/css/test.css
@@ -165,6 +165,7 @@ body {
 }
 
 .select__button {
+  position: relative;
   font-family: inherit;
   font-size: inherit;
   color: inherit;
@@ -185,8 +186,8 @@ body {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   position: absolute;
-  left: 1130px;
-  top: 36px;
+  left: 152px;
+  top: 9px;
 }
 
 .navigation__contacts-link {
