--- a/css/test.css
+++ b/css/test.css
@@ -253,19 +253,36 @@ footer {
   margin-bottom: 32px;
 }
 
-.footer__form {
+.order-form__column-wrapper {
   display: grid;
   grid-template-columns: 285px 255px 1fr;
   column-gap: 16px;
   row-gap: 24px;
+}
+
+.order-form .wpcf7-form {
   padding-bottom: 56px;
   margin-bottom: 56px;
   border-bottom: 1px solid #F5D581;
 }
 
-.form__feedback,
-.form__input,
-.form__button {
+.order-form__column-item-text {
+  grid-column: 1 / -1;
+  min-height: 160px;
+}
+
+.order-form__column-item-input {
+  grid-column: 1 / 3;
+  min-height: 64px;
+}
+
+.order-form__column-item-button {
+  grid-column: 1 / 2;
+}
+
+.order-form .wpcf7-textarea,
+.order-form .wpcf7-text,
+.order-form .wpcf7-submit {
   font: inherit;
   font-size: inherit;
   line-height: inherit;
@@ -276,17 +293,18 @@ footer {
   box-sizing: border-box;
 }
 
-.form__feedback {
-  grid-column: 1 / -1;
+.order-form .wpcf7-textarea {
+  width: 100%;
   min-height: 160px;
 }
 
-.form__input {
-  grid-column: 1 / 3;
+.order-form .wpcf7-text,
+.order-form .wpcf7-submit {
+  width: 100%;
   min-height: 64px;
 }
 
-.form__button {
+.order-form .wpcf7-submit {
   grid-column: 1 / 2;
   font-weight: 500;
   color: #FFFFFF;
@@ -296,22 +314,25 @@ footer {
   border: transparent;
 }
 
-.form__button:hover {
+.order-form .wpcf7-submit:hover {
   background-color: #856103;
 }
 
-.form__button:active {
+.order-form .wpcf7-submit:active {
   background-color: #684C05;
 }
 
-.form__explanatory-text {
-  width: 225px;
+.order-form__column-item-explanation {
   grid-column: 2 / 3;
-  font-size: 12px;
-  opacity: 0.7;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+}
+
+.order-form .wpcf7-response-output {
+  width: 225px;
+  font-size: 12px;
+  opacity: 0.7;
 }
 
 .footer__comments {
