--- a/css/test.css
+++ b/css/test.css
@@ -108,28 +108,31 @@ body {
 .header__wrapper {
   width: 1110px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 10px 165px 18px 165px;
 }
 
 .header-wrapper__link {
   margin-right: auto;
+  padding-right: 30px;
   line-height: 0.7;
 }
 
-/* .header-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
+.header-wrapper__logo {
+  object-fit: contain;
+}
 
 .menu-navigation-container .menu {
   margin: 0;
   padding: 0;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   align-items: flex-end;
-  gap: 40px;
+  column-gap: 40px;
+  row-gap: 25px;
 }
 
 .select__item {
@@ -149,10 +152,18 @@ body {
 
 .menu-navigation-container .menu-item-has-children {
   position: relative;
+}
+
+.menu-navigation-container .menu-item-has-children::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 13px;
+  height: 9px;
   background-image: url(../img/select-button.svg);
-  background-size: 13px 9px;
   background-repeat: no-repeat;
-  background-position: 100% 50%;
+  left: 100%;
+  top: 38%;
 }
 
 .menu-navigation-container .menu-item-has-children a {
@@ -160,6 +171,7 @@ body {
   min-width: 157px;
   color: inherit;
   text-decoration: none;
+  margin-right: 4px;
 }
 
 .menu-navigation-container .menu-item-has-children:hover .sub-menu {
@@ -206,7 +218,7 @@ body {
 }
 
 .front-image-wrapper {
-  padding: 24px 0 56px 0;
+  padding: 24px 0;
 }
 
 .front-image-wrapper img {
@@ -246,7 +258,7 @@ footer {
 
 .order-form__column-wrapper {
   display: grid;
-  grid-template-columns: 285px 255px 1fr;
+  grid-template-columns: 285px 255px auto;
   grid-template-rows: auto auto auto;
   column-gap: 16px;
   row-gap: 24px;
@@ -270,6 +282,8 @@ footer {
 
 .order-form__column-item-button {
   grid-column: 1 / 2;
+  display: flex;
+  align-items: center;
 }
 
 .order-form .wpcf7-textarea,
@@ -333,7 +347,7 @@ footer {
 
 .wpcf7 span {
   display: block;
-  height: 14px;
+  min-height: 14px;
 }
 
 .footer__comments {
@@ -345,7 +359,7 @@ footer {
 .comments__user {
   display: grid;
   grid-template-columns: 50px 1fr;
-  grid-template-rows: 21px auto auto;
+  /* grid-template-rows: 21px auto auto; */
   column-gap: 24px;
   row-gap: 8px;
 }
